--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -7,8 +7,8 @@
 
     <fragment
         android:id="@+id/firstFragment"
-        android:name="com.example.navigationcomponent.FirstFragment"
-        android:label="fragment_first"
+        android:name="com.example.navigationcomponent.views.FirstFragment"
+        android:label="First Fragment"
         tools:layout="@layout/fragment_first" >
         <action
             android:id="@+id/action_firstFragment_to_secondFragment"
@@ -18,8 +18,8 @@
     </fragment>
     <fragment
         android:id="@+id/secondFragment"
-        android:name="com.example.navigationcomponent.SecondFragment"
-        android:label="fragment_second"
+        android:name="com.example.navigationcomponent.views.SecondFragment"
+        android:label="Second Fragment"
         tools:layout="@layout/fragment_second" >
         <action
             android:id="@+id/action_secondFragment_to_firstFragment"
